<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Chukwubuikem Ume-Ugwa
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.cleverchuk.popularmovies.models.Movie" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.cleverchuk.popularmovies.DetailActivity">


            <ImageView
                android:id="@+id/backdrop"
                android:transitionName="@string/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height_big"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="@dimen/image_width_small"
                android:layout_height="@dimen/image_height_small"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />


            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/right_margin"
                android:layout_marginLeft="@dimen/left_magin"
                android:layout_marginRight="@dimen/right_margin"
                android:layout_marginStart="@dimen/left_magin"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@{movie.title}"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.14"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/right_margin"
                android:layout_marginRight="@dimen/right_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@{movie.voteAverage}"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/release_date"
                app:layout_constraintTop_toBottomOf="@+id/release_date"
                tools:text="@string/vote" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/right_margin"
                android:layout_marginRight="@dimen/right_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@{movie.releaseDate}"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="@string/release_date" />


            <TextView
                android:id="@+id/plot_synopsis_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{movie.plotSynopsis}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vote_average"
                tools:text="@string/plot_synop" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="143dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="200dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/video_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/plot_synopsis_tv"
                app:layout_constraintStart_toStartOf="@id/plot_synopsis_tv"
                app:layout_constraintTop_toBottomOf="@id/plot_synopsis_tv" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/video_rcv"
                app:layout_constraintStart_toStartOf="@id/video_rcv"
                app:layout_constraintTop_toBottomOf="@id/video_rcv" />


            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="250dp" />

            <FrameLayout
                android:id="@+id/fav_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@id/guideline">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/unfavorite_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    app:backgroundTint="@android:color/background_light"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_unfavorite" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/favorite_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    app:backgroundTint="@android:color/background_light"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_favorite" />
            </FrameLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>